<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="model"
            type="com.example.carbonfootprintcalculation.login.LoginInputFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/titleIv"
                android:layout_width="@dimen/width_90"
                android:layout_height="@dimen/height_90"
                android:layout_marginLeft="@dimen/margin_122"
                android:layout_marginTop="@dimen/view_height_56"
                android:layout_marginRight="@dimen/margin_122"
                app:layout_constraintBottom_toTopOf="@+id/titleTv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo"/>

            <TextView
                android:id="@+id/titleTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_text"
                android:textAlignment="center"
                android:textColor="@color/page_title_text_color"
                android:textSize="@dimen/text_size_29"
                app:layout_constraintBottom_toTopOf="@+id/loginErrorTv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleIv" />

            <TextView
                android:id="@+id/loginErrorTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_40"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginRight="@dimen/margin_30"
                android:text="@string/login_error_msg"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_11"
                app:layout_constraintBottom_toTopOf="@+id/constraint_two"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTv" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginTop="@dimen/margin_15"
                android:layout_marginRight="@dimen/margin_30"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginErrorTv">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:background="@drawable/round_edit_text"
                    android:textColorHint="@color/hint_text_color"
                    app:layout_constraintBottom_toTopOf="@+id/password"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:passwordToggleTint="@color/hint_text_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_email"
                        android:inputType="text"
                        android:paddingLeft="@dimen/padding_14"
                        android:textColor="@color/page_title_text_color"
                        android:textSize="@dimen/text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:background="@drawable/round_edit_text"
                    android:textColorHint="@color/hint_text_color"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/hint_text_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/padding_14"
                        android:textColor="@color/page_title_text_color"
                        android:textSize="@dimen/text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnSignIn"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_41"
                    android:backgroundTint="@color/colorPrimary"
                    android:padding="@dimen/button_padding"
                    android:text="@string/sign_in"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password" />

                <Button
                    android:id="@+id/btnSignUp"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_41"
                    android:backgroundTint="@color/colorPrimary"
                    android:padding="@dimen/button_padding"
                    android:text="@string/sign_up"
                    android:textSize="@dimen/text_size"
                    android:onClick="@{model.actionSignUp}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>