<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.example.carbonfootprintcalculation.dashboard.HomeFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dash_board_background">


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:paddingBottom="@dimen/padding_20"
            android:rowCount="5">

            <androidx.cardview.widget.CardView
                android:id="@+id/carCv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_117"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="@dimen/margin_11"
                android:onClick="@{model.actionCar}"
                android:layout_marginTop="@dimen/margin_top_12"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="@dimen/corner_radius_10">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/width_40"
                        android:layout_height="@dimen/height_40"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/car" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/car_title"
                        android:textColor="@color/dash_board_text_color"
                        android:textSize="@dimen/text_size_11" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/publicTransCV"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_117"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="@dimen/margin_left_13"
                android:layout_marginTop="@dimen/margin_top_12"
                android:layout_marginRight="@dimen/margin_11"
                android:onClick="@{model.actionTransport}"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="@dimen/corner_radius_10">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="@dimen/width_40"
                        android:layout_height="@dimen/height_40"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/public_transfer" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/transport_title"
                        android:textColor="@color/dash_board_text_color"
                        android:textSize="@dimen/text_size_11" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/foodCv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_117"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="@dimen/margin_11"
                android:layout_marginTop="@dimen/margin_top_12"
                android:onClick="@{model.actionFood}"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="@dimen/corner_radius_10">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/width_40"
                        android:layout_height="@dimen/height_40"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/food" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/food_title"
                        android:textColor="@color/dash_board_text_color"
                        android:textSize="@dimen/text_size_11" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/setProfileCv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_117"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="@dimen/margin_left_13"
                android:layout_marginTop="@dimen/margin_top_12"
                android:layout_marginRight="@dimen/margin_11"
                android:onClick="@{model.actionEditProfile}"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="@dimen/corner_radius_10">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/width_40"
                        android:layout_height="@dimen/height_40"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/set_profile" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/setProfile_title"
                        android:textColor="@color/dash_board_text_color"
                        android:textSize="@dimen/text_size_11" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/adminUserViewCv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_117"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="@dimen/margin_left_13"
                android:layout_marginTop="@dimen/margin_top_12"
                android:layout_marginRight="@dimen/margin_11"
                android:onClick="@{model.actionAdminUserView}"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="@dimen/corner_radius_10">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/width_40"
                        android:layout_height="@dimen/height_40"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/set_profile" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/userViewProfile_title"
                        android:textColor="@color/dash_board_text_color"
                        android:textSize="@dimen/text_size_11" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>
    </ScrollView>
</layout>
